styles/video.css
.thumbnail {
  width: 100%;
}

.thumbnail-row {
  margin-bottom: 8px;
  position: relative;
}

.video-time {
  background-color: rgba(0, 0, 0, 0.9);
  color: white;
  position: absolute;
  bottom: 11px;
  right: 4px;
  font-family: Roboto, Arial;
  font-size: 12px;
  font-weight: 500;
  padding: 4px 4px;
  border-radius: 2px;
}

.video-info-grid {
  display: grid;
  grid-template-columns: 48px 1fr;
}

.profile-picture {
  width: 36px;
  border-radius: 100px;
}

.video-title {
  margin-top: 0;
  font-size: 14px;
  font-weight: 500;
  line-height: 20px;
  margin-bottom: 10px;
}

.video-author,
.video-stats {
  font-size: 12px;
  color: rgb(96, 96, 96);
}

.video-author {
  margin-bottom: 4px;
}

.video-grid {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  column-gap: 16px;
  row-gap: 40px;
}

